--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,12 +19,11 @@ services:
       - minio
     entrypoint: >
       /bin/sh -c "
-      /usr/bin/mc config host rm local;
-      /usr/bin/mc config host add --quiet --api s3v4 local http://minio:9000 minio minio123;
-      /usr/bin/mc rb --force local/media/;
-      /usr/bin/mc mb --quiet local/media/;
-      /usr/bin/mc policy set public local/media/;
+      sleep 5;
+      /usr/bin/mc alias set local http://minio:9000 minio minio123;
+      /usr/bin/mc rm -r --force local/media || true;
+      /usr/bin/mc mb local/media;
+      /usr/bin/mc anonymous set download local/media;
       "
-
 volumes:
   minio-data:
