--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           MINIO_ACCESS_KEY: minio
           MINIO_SECRET_KEY: minio123
-          
+
     env:
       DEBUG: true
       SECRET_KEY: django-insecure-J8VliX3EyI4hak5LuS6YW9bojYdIkKT1UvVHt3sQ-FkvyUJHTtw_9S7EHXlW3nAtAvw
@@ -56,21 +56,21 @@ jobs:
 
       - name: Wait for MinIO to be ready
         run: |
-          for i in {1..10}; do
-            if curl -s http://localhost:9000/minio/health/live; then
-              echo "MinIO is up"
+          for i in {1..15}; do
+            if curl -s http://localhost:9000/minio/health/ready; then
+              echo "MinIO is ready"
               break
             fi
-            echo "Waiting for MinIO..."
-            sleep 5
+            echo "Waiting for MinIO to be ready..."
+            sleep 4
           done
-      
-      - name:  Init MinIO bucket
+
+      - name: Init MinIO bucket
         run: |
-          curl https://dl.min.io/client/mc/release/linux-amd64/mc
+          curl -o mc https://dl.min.io/client/mc/release/linux-amd64/mc
           chmod +x mc
           ./mc alias set local http://localhost:9000 minio minio123
-          ./mc mb local/media || true  # Create bucket if it doesn't exist
+          ./mc mb local/media || true
           ./mc policy set public local/media
 
       - name: Run migrations
